--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,39 @@
+@font-face {
+  font-family: "GeometosNeueLight";
+  src: local("GeometosNeueLight"),
+    url(./@fonts/GeometosNeueLight.ttf) format("truetype");
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "GeometosNeueLight";
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+* {
+  font-family: "GeometosNeueLight";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: "GeometosNeueLight";
+}
+
+a {
+  text-decoration: none !important;
+  color: inherit !important;
+  cursor: pointer;
+}
+
+.signupButton {
+  border-radius: 0 20px 20px 0 !important;
+}
+
+.loginButton {
+  border-radius: 20px 0 0 20px !important;
+}
+
+.dropdown-toggle::after {
+  display: none !important;
 }
